# synthetic_dataset

./: .gitignore  README.md  pyproject.toml  setup.py
jupyter/: data_generator.ipynb
soydata/: __init__.py
soydata/data/: __init__.py  _data_generator.py  _generated_data.py  base.py
soydata/data/classification/: __init__.py  manifold.py  recipe.py  spatial.py
soydata/data/clustering/: __init__.py  clustering.py  manifold.py
soydata/data/regression/: __init__.py  simple.py
soydata/data/supervised/: __init__.py  manifold.py  spatial.py
soydata/data/unsupervised/: __init__.py  clustering.py  manifold.py
soydata/visualize/: __init__.py  _plot.py  bokeh.py  plotly.py  utils.py
