[tool.poetry]
name = "soydata"
version = "0.2.0"
description = "Synthetic dataset"
authors = ["lovit"]

[tool.poetry.dependencies]
python = "^3.9"
importlib-metadata = "6.7.0"
tqdm = "^4.65.0"
numpy = "^1.25"
# scipy = "^1.10"
urllib3 = "1.26.17"
bokeh = "^3.0"
plotly = "4.3.0"

[tool.poetry.dev-dependencies]
flake8 = "6.0.0"
mypy = "1.4.1"
black = "^23.3.0"
tox = "3.28.0"

[tool.black]
target-version = ['py39']
line-length = 127

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
